--- a/public/bootstrap4/theme/sandstone.css
+++ b/public/bootstrap4/theme/sandstone.css
@@ -4263,8 +4263,10 @@ tbody.collapse.show {
     color: #000
 }
 
+
+
 .navbar-dark .navbar-brand {
-    color: #fff
+    color: #fff;
 }
 
 .navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand:hover {
@@ -4307,7 +4309,6 @@ tbody.collapse.show {
 .navbar-dark .navbar-text a:focus, .navbar-dark .navbar-text a:hover {
     color: #fff
 }
-
 .card {
     position: relative;
     display: -webkit-box;
@@ -8905,7 +8906,7 @@ a.text-dark:focus, a.text-dark:hover {
 }
 
 .bg-primary {
-    background-color: #3E3F3A !important
+    background-color: #272725 !important
 }
 
 .bg-dark {
