--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -8,7 +8,7 @@ html,body {
 
 
     /* The image used */
-    background-image: url("../gfx/landing/gastown.jpg");
+    background-image: url("../gfx/landing/vancouver.png");
 
     /* Set a specific height */
     min-height: 35rem;
@@ -24,7 +24,7 @@ html,body {
 
 section {
     width:100%;
-    height:100%;
+    height:auto;
     margin-bottom:2rem;
 }
 
@@ -38,18 +38,20 @@ section {
 .panel-text {
     margin-top:5%;
     color:white;
-    font-size:3rem;
+    font-size:2.3rem;
     text-transform: uppercase;
     font-weight: bold;
 }
 .panel-subtext {
     color:silver;
-    font-size:1.5rem;
+    font-size:1.3rem;
 
 }
 
 
-
+.card {
+    margin-top:2rem;
+}
 
 .card-without-border {
     border-style: none;
@@ -123,4 +125,29 @@ section {
     0% { opacity: 1; }
     50% { opacity: 0; }
     100% { opacity: 1; }
+}
+
+/*RATING*/
+.star {
+
+    display:inline-block;
+    float:right;
+}
+
+
+
+
+
+.rating-list {
+list-style: none
+}
+.rating-list > li {
+    margin-top:.3rem;
+}
+.rating-font {
+    font-size:1.3rem;
+}
+.rating-item{
+    margin-top:-1.5rem;
+    margin-left:1.3rem;
 }
