--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -8,7 +8,7 @@ html,body {
 
 
     /* The image used */
-    background-image: url("../gfx/landing/vancouver.png");
+    background-image: url("../gfx/landing/vancouver.jpg");
 
     /* Set a specific height */
     min-height: 35rem;
