why beforeimove section

--- a/public/bootstrap4/theme/sass/minty.scss
+++ b/public/bootstrap4/theme/sass/minty.scss
@@ -292,3 +292,14 @@ legend {
   }
 }
 
+
+
+// CARDs =============================
+
+.card-title {
+  font-size:1.1rem;
+  font-weight: bold;
+}
+.rating-list {
+  font-size:.8rem;
+}
