changed project to gofoodies

--- a/public/bootstrap4/theme/sass/_var.scss
+++ b/public/bootstrap4/theme/sass/_var.scss
@@ -38,9 +38,11 @@ $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
 
-//*BeforeIMove Colors
+//*GoFoodies Colors
 $coal: #545454;
 $vine: #c93c3c;
+$black: #222222;
+$light-gray: #efefef;
 
 //buttons
 
