--- a/public/bootstrap4/theme/sass/minty.scss
+++ b/public/bootstrap4/theme/sass/minty.scss
@@ -17,6 +17,13 @@ $font-family-sans-serif: $web-font-path;
   margin-bottom: .3rem;
 }
 
+// General =====================================================================
+
+body {
+  color: $dark;
+}
+
+
 // Navbar ======================================================================
 
 .navbar {
@@ -26,7 +33,7 @@ $font-family-sans-serif: $web-font-path;
 
 .nav-item {
   .nav-link {
-    color: $coal !important;
+    color: $white !important;
   }
   .nav-link:hover {
     color: $secondary !important;
@@ -42,7 +49,7 @@ $font-family-sans-serif: $web-font-path;
 }
 
 .bg-dark {
-  background-color: $primary !important;
+  background-color: $black !important;
 }
 
 .border-dark {
@@ -303,3 +310,5 @@ legend {
 .rating-list {
   font-size:.8rem;
 }
+
+
