--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -26,7 +26,7 @@ html,body {
 
 section {
     width:100%;
-    height:auto;
+    min-height:100%;
     margin-bottom:2rem;
 }
 
@@ -59,7 +59,7 @@ section {
     margin-top:2rem;
     /*background-color:red;*/
     padding-top:2rem;
-    width:15rem;
+
 }
 
 .card-body {
@@ -76,11 +76,38 @@ section {
     text-align: center;
 }
 
+.img-restaurant {
+    width:7rem;
+    height:7rem;
+    margin:2rem;
+}
+
+
+/* IMG WITH TEXT CENTERED*/
+
+.thumbnail {
+    position: relative;
+    margin-left:1.5rem;
+    margin-top:1.5rem;
+}
+
+.caption {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+}
+
+.caption > p {
+    color:white;
+    font-size:1.5rem;
+}
 
 
 
 
-/*MOUSE SCROLL*/
+
+/*MOUSE SCROLL ANIMATION */
 
 .scroll-downs {
     position: absolute;
@@ -149,7 +176,7 @@ section {
 
 
 
-
+/*RATING-CARD*/
 
 .rating-list {
 list-style: none
