landing page updates, footer

--- a/public/bootstrap4/theme/sass/_var.scss
+++ b/public/bootstrap4/theme/sass/_var.scss
@@ -28,7 +28,8 @@ $green:   #56CC9D !default;
 $teal:    #20c997 !default;
 $cyan:    #6CC3D5 !default;
 
-$primary:       #fbfdfd !default;
+$primary:       #ffa736 !default;
+$primary-light: #ffbd68 !default;
 $secondary:     #f04242 !default;
 $success:       $green !default;
 $info:          $cyan !default;
